--- a/AWS.NETCoreWeb.AppConfig/appsettings.json
+++ b/AWS.NETCoreWeb.AppConfig/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "Region": "ap-northeast-1",
+    "AWSAccessKey": "AKIA2C2TL65VGJ7DOGQX",
+    "AWSSecretKey": "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"
+  },
+  "MySql": "server=database-2.cdiostsnewls.ap-northeast-1.rds.amazonaws.com;uid=admin;pwd=Passw0rd;database=CnBateBlogWeb"
 }
