--- a/AWS.NETCoreWeb.AppConfig/AWS.NETCoreWeb.AppConfig.csproj
+++ b/AWS.NETCoreWeb.AppConfig/AWS.NETCoreWeb.AppConfig.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
