--- a/AWS.NETCoreWeb.AppConfig/AWS.NETCoreWeb.AppConfig.csproj
+++ b/AWS.NETCoreWeb.AppConfig/AWS.NETCoreWeb.AppConfig.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
