--- a/AWS.NETCoreWeb.AppConfig/appsettings.json
+++ b/AWS.NETCoreWeb.AppConfig/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
   "AWS": {
     "Region": "ap-northeast-1",
-    "AWSAccessKey": "AKIA2C2TL65VGJ7DOGQX",
-    "AWSSecretKey": "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"
+    "AWSAccessKey": "xxxxxx",
+    "AWSSecretKey": "xxxx"
   },
-  "MySql": "server=database-2.cdiostsnewls.ap-northeast-1.rds.amazonaws.com;uid=admin;pwd=Passw0rd;database=CnBateBlogWeb"
+  "MySql": "server=database-2.cdiostsnewls.ap-northeast-1.rds.amazonaws.com;uid=xxxx;pwd=xxxx;database=CnBateBlogWeb"
 }
